--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -5,6 +5,11 @@
   .login-signup form .form-field .form-control {
     padding: 11px 19px !important;
   }
+  form .form-field select.form-control {
+    padding: 11px 22px 11px 11px !important;
+    background-position: right 10px center !important;
+    background-size: 10px auto !important;
+  }
   .login-logo-image {
     margin-bottom: 10px;
   }
@@ -2636,6 +2641,11 @@
   .wallet-main-left,
   .wallet-top-wrap .wallet-title-wrap {
     width: 100%;
+  }
+  form .form-field select.form-control.form-select {
+    padding: 11px 22px 11px 11px !important;
+    background-position: right 10px center !important;
+    background-size: 10px auto !important;
   }
 }
 
