--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1220,6 +1220,7 @@ form .form-field select.form-control {
   display: flex;
   justify-content: center;
   overflow: hidden;
+  border-radius: 50%;
 }
 .profile-avtar > img {
   display: block;
