--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -886,6 +886,7 @@ form {
   border: 2px solid #363853;
   max-width: 100%;
   max-height: 100%;
+  margin: auto;
 }
 .upload-profile-image {
   display: flex;
