cards relates issues

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1221,7 +1221,7 @@ form .form-field select.form-control {
   display: flex;
   justify-content: center;
   overflow: hidden;
-  border-radius: 50%;
+  border-radius: 50px;
 }
 .profile-avtar > img {
   display: block;
